--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>mobicents-parent</artifactId>
 		<groupId>org.mobicents</groupId>
-		<version>2.23-SNAPSHOT</version>
+		<version>2.24</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
@@ -89,12 +89,11 @@
 	</modules>
 
 	<properties>
-		<jain-sip-ri.version>1.2.X-NIO-SNAPSHOT</jain-sip-ri.version>
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.13.1.FINAL</mobicents.cluster.version>
-		<mobicents.balancer.version>1.6.0-SNAPSHOT</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.2-SNAPSHOT</mobicents.jain.sip.ext.version>
+		<mobicents.cluster.version>1.14.0.FINAL</mobicents.cluster.version>
+		<mobicents.balancer.version>1.6.0.FINAL</mobicents.balancer.version>
+		<mobicents.jain.sip.ha.version>1.4.0.FINAL</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ext.version>1.2.0.FINAL</mobicents.jain.sip.ext.version>
 	</properties>
 
 	<dependencies>
