[maven-release-plugin] prepare release release-2.0.0.FINAL

--- a/sip-servlets-test-suite/applications/click-to-call-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/click-to-call-servlet/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.testsuite.applications</groupId>
 		<artifactId>sip-servlets-test-suite-applications</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 	</parent>
     <artifactId>click-to-call-servlet</artifactId>
     <packaging>war</packaging>
