--- a/containers/sip-servlets-as7/pom.xml
+++ b/containers/sip-servlets-as7/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.containers</groupId>
@@ -51,17 +51,17 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.8.0-SNAPSHOT</version>			
+			<version>2.0.0.FINAL</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>1.8.0-SNAPSHOT</version>			
+			<version>2.0.0.FINAL</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-core-api</artifactId>
-			<version>1.8.0-SNAPSHOT</version>			
+			<version>2.0.0.FINAL</version>			
 		</dependency>
 		<dependency>
 			<groupId>javax.sip</groupId>
