--- a/docs/jdocbook-mobicents/pom.xml
+++ b/docs/jdocbook-mobicents/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.docs</groupId>
 		<artifactId>sip-servlets-docs</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 	</parent>
 	
 	<artifactId>sip-servlets-docs-jdocbook-mobicents</artifactId>
