--- a/docs/sources/pom.xml
+++ b/docs/sources/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.docs</groupId>
 		<artifactId>sip-servlets-docs</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 	</parent>
 	
 	<artifactId>sip-servlets-docs-sources</artifactId>
