--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>mobicents-parent</artifactId>
@@ -8,7 +7,7 @@
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
-	<version>1.8.0-SNAPSHOT</version>
+	<version>2.0.0.FINAL</version>
 	<packaging>pom</packaging>
 
 	<name>Mobicents Sip Servlets</name>
@@ -179,9 +178,7 @@
 								<phase>site</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true"
-											file="${project.build.directory}/site/index.html"
-											tofile="${project.build.directory}/site/products_sip_servlets.html" />
+										<copy verbose="true" file="${project.build.directory}/site/index.html" tofile="${project.build.directory}/site/products_sip_servlets.html" />
 									</tasks>
 								</configuration>
 								<goals>
