--- a/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
+++ b/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>alerting-app-parent</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>alerting-app</artifactId>
