--- a/sip-servlets-examples/custom-call-forwarding-distributable/pom.xml
+++ b/sip-servlets-examples/custom-call-forwarding-distributable/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>custom-call-forwarding-distributable</artifactId>
