--- a/sip-servlets-examples/simple-sip-servlet/pom.xml
+++ b/sip-servlets-examples/simple-sip-servlet/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.8.0-SNAPSHOT</version>
+		<version>2.0.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.examples</groupId>
 	<artifactId>simple-sip-servlet</artifactId>
 	<packaging>war</packaging>
-	<version>1.8.0-SNAPSHOT</version>
+	<version>2.0.0.FINAL</version>
 	<name>Simple Sip Servlet Example</name>
 	<url>http://www.mobicents.org/examples.html</url>
 	<build>
