--- a/containers/sip-servlets-as7-drop-in/build-mobicents-modules/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/build-mobicents-modules/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>2.0.0.FINAL</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath>../../../pom.xml</relativePath>
     </parent>
 
