--- a/sip-servlets-core-api/pom.xml
+++ b/sip-servlets-core-api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>2.0.0.FINAL</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>sip-servlets-core-api</artifactId>
@@ -15,22 +15,22 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>2.0.0.FINAL</version>			
+			<version>2.1.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jruby</artifactId>
-			<version>2.0.0.FINAL</version>			
+			<version>2.1.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-client</artifactId>
-			<version>2.0.0.FINAL</version>			
+			<version>2.1.0-SNAPSHOT</version>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
-			<version>2.0.0.FINAL</version>			
+			<version>2.1.0-SNAPSHOT</version>			
 		</dependency>
 		<!-- logging dependency -->
 		<dependency>
