--- a/sip-servlets-examples/click-to-call/pom.xml
+++ b/sip-servlets-examples/click-to-call/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>2.0.0.FINAL</version>
+		<version>2.1.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>click-to-call-servlet</artifactId>
