--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.testsuite</groupId>
 		<artifactId>sip-servlets-test-suite-parent</artifactId>
-		<version>2.0.0.FINAL</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.testsuite.applications</groupId>
 	<artifactId>sip-servlets-test-suite-applications</artifactId>
@@ -92,28 +92,28 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>2.0.0.FINAL</version>
+			<version>2.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>2.0.0.FINAL</version>
+			<version>2.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
-			<version>2.0.0.FINAL</version>
+			<version>2.1.0-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-client</artifactId>
-			<version>2.0.0.FINAL</version>			
+			<version>2.1.0-SNAPSHOT</version>			
 		</dependency>
 		
 		<dependency>
