--- a/sip-servlets-examples/conference-demo-jsr309/pom.xml
+++ b/sip-servlets-examples/conference-demo-jsr309/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<!--
-		GWT-Maven example POM without google.webtoolkit.home SET (GWT as deps)
-	-->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<!-- GWT-Maven example POM without google.webtoolkit.home SET (GWT as deps) -->
 	<parent>
 		<groupId>org.mobicents.servlet.sip.examples</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
@@ -14,7 +13,7 @@
 	<packaging>war</packaging>
 	<name>mobicents-sip-servlets-conference-jsr309</name>
 
-	<!--  include pluginRepository and repository for GWT-Maven -->
+	<!-- include pluginRepository and repository for GWT-Maven -->
 	<pluginRepositories>
 		<pluginRepository>
 			<id>gwt-maven-plugins</id>
@@ -29,16 +28,16 @@
 			<url>
                 http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/
             </url>
-		</repository>		
+		</repository>
 	</repositories>
 
-	<!--  convenience to define GWT version in one place -->
+	<!-- convenience to define GWT version in one place -->
 	<properties>
 		<gwtVersion>1.5.3</gwtVersion>
 	</properties>
 
 	<dependencies>
-		<!--  GWT deps (from central repo) -->
+		<!-- GWT deps (from central repo) -->
 		<dependency>
 			<groupId>com.gwtext</groupId>
 			<artifactId>gwtext</artifactId>
@@ -85,9 +84,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.mobicents.jsr309</groupId>
-			<artifactId>mobicents-jsr309-impl</artifactId>
-			<version>2.4.0.FINAL</version>
+			<groupId>org.mobicents.media.client</groupId>
+			<artifactId>jsr-309-driver</artifactId>
+			<version>3.0.0.CR1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -95,7 +94,7 @@
 			<version>1.0.4</version>
 			<scope>provided</scope>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
@@ -108,7 +107,7 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
@@ -119,7 +118,7 @@
 
 	<build>
 		<plugins>
-			<!--  configure the GWT-Maven plugin -->
+			<!-- configure the GWT-Maven plugin -->
 			<plugin>
 				<groupId>com.totsp.gwt</groupId>
 				<artifactId>maven-googlewebtoolkit2-plugin</artifactId>
@@ -133,14 +132,10 @@
 					<style>DETAILED</style>
 					<noServer>false</noServer>
 					<extraJvmArgs>-Xmx1012m</extraJvmArgs>
-					<!--
-						this parameter is VERY important with automatic mode - has to
-						match the version in your declared deps
-					-->
-					<!--
-						if this is set incorrect, or left out and default does not match
-						(default is 1.5.2 for 2.0-beta23) you will have mysterious errors
-					-->
+					<!-- this parameter is VERY important with automatic mode - has to match 
+						the version in your declared deps -->
+					<!-- if this is set incorrect, or left out and default does not match 
+						(default is 1.5.2 for 2.0-beta23) you will have mysterious errors -->
 					<gwtVersion>${gwtVersion}</gwtVersion>
 				</configuration>
 				<executions>
@@ -153,12 +148,10 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--  Use the dependency plugin to unpack gwt-dev-PLATFORM-libs.zip -->
-			<!--
-				(this is a replacement for the old "automatic" mode - useful if you
-				don't have GWT installed already, or you just want a maven way to
-				handle gwt deps)
-			-->
+			<!-- Use the dependency plugin to unpack gwt-dev-PLATFORM-libs.zip -->
+			<!-- (this is a replacement for the old "automatic" mode - useful if you 
+				don't have GWT installed already, or you just want a maven way to handle 
+				gwt deps) -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -185,20 +178,18 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--
-				If you want to use the target/web.xml file mergewebxml produces,
-				tell the war plugin to use it. 
-				Also, exclude what you want from the final artifact here. 
-			-->
+			<!-- If you want to use the target/web.xml file mergewebxml produces, 
+				tell the war plugin to use it. Also, exclude what you want from the final 
+				artifact here. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<webXml>target/web.xml</webXml>
-                    <warSourceExcludes>.gwt-tmp/**</warSourceExcludes>					
-				</configuration>				
+					<warSourceExcludes>.gwt-tmp/**</warSourceExcludes>
+				</configuration>
 			</plugin>
-			<!--  tell the compiler we can use 1.5 -->
+			<!-- tell the compiler we can use 1.5 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -210,14 +201,14 @@
 		</plugins>
 	</build>
 
-	<!--  profiles (with activation per platform) -->
+	<!-- profiles (with activation per platform) -->
 	<profiles>
-			<profile>			
+		<profile>
 			<id>deploy</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
-			</activation>			
-			<build>			
+			</activation>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -228,7 +219,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/default/deploy" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${JBOSS_HOME}/server/default/deploy" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -237,7 +230,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					</plugins>
+				</plugins>
 			</build>
 		</profile>
 		<profile>
