--- a/sip-servlets-test-suite/tck/jboss-5/excludeList.properties
+++ b/sip-servlets-test-suite/tck/jboss-5/excludeList.properties
@@ -106,3 +106,7 @@ exclude.method.48=com.bea.sipservlet.tck.agents.spec.MultihomedTest.testMultihom
 
 exclude.method.49=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetDisplayName101
 exclude.method.50=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetURI101
+
+# exclude test because it enforces the container not to provide a Via to the application on request ceation which is incompatibl with the ability to setting parameters on Via Header
+# after http://code.google.com/p/sipservlets/issues/detail?id=31 Rport in Via header when acting UAC
+ exclude.method.51=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.B2buaHelperTest.testCreateRequest001
