--- a/containers/sip-servlets-as7-drop-in/.classpath
+++ b/containers/sip-servlets-as7-drop-in/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="jboss-as-mobicents/src/main/java"/>
+	<classpathentry kind="src" path="jboss-as-mobicents/src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="jboss-as-mobicents/target/classes"/>
 </classpath>
