--- a/sip-servlets-impl/src/main/resources/org/mobicents/servlet/sip/core/release.properties
+++ b/sip-servlets-impl/src/main/resources/org/mobicents/servlet/sip/core/release.properties
@@ -5,4 +5,11 @@ release.version=${pom.version}
 release.revision=r${buildNumber}
 release.date=${release.timestamp}
 release.name=${mobicents.name}
-release.disclaimer=${release.disclaimer}
+release.disclaimer=\n\
+		==============================================================================\n\
+		==                                                                          ==\n\
+		==              Thank you for running Mobicents Community code              ==\n\
+		==   For Commercial Grade Support, please request a TelScale Subscription   ==\n\
+		==                         http://www.telestax.com/                         ==\n\
+		==                                                                          ==\n\
+		==============================================================================\n\
