--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.14.0.FINAL</mobicents.cluster.version>
 		<mobicents.balancer.version>1.7.0-SNAPSHOT</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>1.4.0.FINAL</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ha.version>1.5.0-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<mobicents.jain.sip.ext.version>1.2.0.FINAL</mobicents.jain.sip.ext.version>
 	</properties>
 
