--- a/sip-servlets-examples/conference-demo-jsr309/.project
+++ b/sip-servlets-examples/conference-demo-jsr309/.project
@@ -1,13 +1,17 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>conference-demo</name>
-  <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <name>conference-demo-jsr309</name>
+  <comment>Mobicents SIP Servlets. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>sip-servlets-spec</project>
+    <project>sip-servlets-client</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
-    </buildCommand>    
+    </buildCommand>
   </buildSpec>
-  <natures>    
+  <natures>
     <nature>org.eclipse.jdt.core.javanature</nature>
   </natures>
 </projectDescription>
