--- a/containers/sip-servlets-as7/.project
+++ b/containers/sip-servlets-as7/.project
@@ -1,15 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
   <name>sip-servlets-as7</name>
-  <comment>Mobicents :: Parent pom for 1.x releases. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <comment>Mobicents SIP Servlets. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>mobicents-jain-sip-ext</project>
-    <project>mobicents-jain-sip-ha-core</project>
-    <project>sip-servlets-annotations</project>
-    <project>sip-servlets-client</project>
-    <project>sip-servlets-core-api</project>
-    <project>sip-servlets-impl</project>
-    <project>sip-servlets-jruby</project>
     <project>sip-servlets-spec</project>
+    <project>sip-servlets-impl</project>
+    <project>sip-servlets-core-api</project>
+    <project>sip-servlets-jruby</project>
+    <project>sip-servlets-client</project>
+    <project>sip-servlets-annotations</project>
+    <project>mobicents-jain-sip-ha-core</project>
   </projects>
   <buildSpec>
     <buildCommand>
