fixing classpath and poms

--- a/sip-servlets-examples/alerting-app/.classpath
+++ b/sip-servlets-examples/alerting-app/.classpath
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<!--classpathentry kind="src" output="jslee-services/sms-alerting-sbb/target/classes" path="jslee-services/sms-alerting-sbb/src/main/java"/>
-	<classpathentry kind="src" output="jslee-events/events/target/classes" path="jslee-events/events/src/main/java"/>
-	<classpathentry kind="src" output="jslee-services/sms-alerting-sbb/target/classes" path="jslee-services/sms-alerting-sbb/src/main/resources"/>
-	<classpathentry kind="src" output="jslee-services/services-du/target/classes" path="jslee-services/services-du/src/main/resources"/>
-	<classpathentry kind="src" output="jslee-events/events/target/classes" path="jslee-events/events/src/main/resources"/-->
 	<classpathentry kind="src" output="sip-servlets/src/main/sipapp/WEB-INF/classes" path="sip-servlets/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="var" path="M2_REPO/org/hibernate/hibernate-commons-annotations/3.0.0.ga/hibernate-commons-annotations-3.0.0.ga.jar"/>
@@ -12,15 +7,12 @@
 	<classpathentry kind="var" path="M2_REPO/javax/servlet/servlet-api/2.5/servlet-api-2.5.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-ejb_3.0_spec/1.0/geronimo-ejb_3.0_spec-1.0.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/annotations-api/7.0.33/annotations-api-7.0.33.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/tomcat/tomcat-annotations-api/7.0.33/tomcat-annotations-api-7.0.33.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-spec/2.1.0-SNAPSHOT/sip-servlets-spec-2.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/apache/geronimo/specs/geronimo-j2ee_1.4_spec/1.1/geronimo-j2ee_1.4_spec-1.1.jar"/>
-	<!--classpathentry kind="var" path="M2_REPO/org/mobicents/resources/smpp-ratype/1.2.6.GA/smpp-ratype-1.2.6.GA.jar"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/resources/smpp-events/1.2.6.GA/smpp-events-1.2.6.GA.jar"/>
-	<classpathentry kind="var" path="M2_REPO/javax/slee/jain-slee/1.0/jain-slee-1.0.jar"/-->
 	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.14/log4j-1.2.14.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/external/jsr309/mscontrol/1.0/mscontrol-1.0.jar"/>
-  	<classpathentry kind="var" path="M2_REPO/jain/jain-mgcp-ri/1.0/jain-mgcp-ri-1.0.jar"/>
-  	<classpathentry kind="var" path="M2_REPO/org/mobicents/jsr309/mobicents-jsr309-impl/2.0.0.BETA5/mobicents-jsr309-impl-2.0.0.BETA5.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jain/jain-mgcp-ri/1.0/jain-mgcp-ri-1.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/jsr309/mobicents-jsr309-impl/2.0.0.BETA5/mobicents-jsr309-impl-2.0.0.BETA5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
