Update Issue 203 backport from issue-203
Initial commit was incomplete. This completes all changes.

(cherry picked from commit 99a569e730f2ecbddc9554da04cc524cbc70242f)

Conflicts:
	containers/sip-servlets-as7-drop-in/build-mobicents-modules/pom.xml
	containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
	containers/sip-servlets-as7-drop-in/jboss-as-mobicents/src/main/java/org/mobicents/metadata/sip/parser/SipLoginConfigMetaDataParser.java
	containers/sip-servlets-as7/pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -341,6 +341,7 @@
 			</modules>
 			<properties>				
 				<version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>1.0.0.Final</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>
+				<log4j.version>1.2.16</log4j.version>
 			</properties>
 			<dependencies>
 				<!-- j2ee dependencies -->
