--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/src/main/resources/org/mobicents/as7/LocalDescriptions.properties
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/src/main/resources/org/mobicents/as7/LocalDescriptions.properties
@@ -20,6 +20,7 @@ sip.canceled-timer-tasks-purge-period=Defines a period to due a purge in the con
 sip.memory-threshold=Memory Threshold that when reached by the container, the container will start rejecting new incoming requests 
 sip.back-to-normal-memory-threshold=Back To Normal Memory Threshold that when reached by the container, the container will start accepting new incoming requests again
 sip.congestion-control-policy=The congestion control policy defines how an incoming message is handled when the server is overloaded
+sip.outbound-proxy=The outbound proxy defines the default IP Address, port and transport used by outgoing messages if defined
 
 sip.configuration=The common sip container configuration.
 
