--- a/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
+++ b/containers/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
@@ -83,19 +83,20 @@
         <dependency>
             <groupId>org.jboss.as</groupId>
             <artifactId>jboss-as-web</artifactId>
-	    <version>7.1.2.Final</version>
+	    <version>7.1.3.Final</version>
         </dependency>
 
 	<dependency>
            <groupId>org.jboss</groupId>
            <artifactId>jboss-vfs</artifactId>
            <version>3.1.0.Final</version>
+	   <scope>provided</scope>
        </dependency>
 
         <dependency>
             <groupId>org.jboss.web</groupId>
             <artifactId>jbossweb</artifactId>
-	    <version>7.0.16.Final</version>
+	    <version>7.0.17.Final</version>
         </dependency>
 
         <dependency>
@@ -212,6 +213,7 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+	    <scope>provided</scope>
         </dependency>
 
     </dependencies>
