--- a/containers/sip-servlets-as7/pom.xml
+++ b/containers/sip-servlets-as7/pom.xml
@@ -21,16 +21,16 @@
 		<dependency>
 			<groupId>org.jboss.web</groupId>
 			<artifactId>jbossweb</artifactId>
-			<version>7.0.16.Final</version>
+			<version>7.0.17.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.as</groupId>
 			<artifactId>jboss-as-web</artifactId>
-			<version>7.1.2.Final</version>
+			<version>7.1.3.Final</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+		<!--dependency>
             <groupId>org.jboss.security</groupId>
             <artifactId>jbosssx</artifactId>
             <version>2.0.5.Final</version>
@@ -39,11 +39,11 @@
             <groupId>org.jboss.security</groupId>
             <artifactId>jboss-security-spi</artifactId>
             <version>2.0.5.Final</version>
-        </dependency>
+        </dependency-->
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
-			<version>3.1.1.GA</version>
+			<version>3.1.2.GA</version>
 			<scope>provided</scope>
 		</dependency>
 
